fix alignment of quote author

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
   .quote-content {
     background-color: #E5E7EB;
     flex: 1;
-    padding: 40px 80px;
+    padding: 40px 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -101,7 +101,8 @@
     font-weight: 1000;
     font-size: 24px;
     color:#483434;
-    align-self: end;
+    /* align-items: end; */
+    margin-left: auto;    
   }
 
   .call-to-action {
